[package]
name = "elevator_system"
version = "0.1.0"
edition = "2021"
default-run = "elevator_system"

[dependencies]
bma-benchmark = "0.0.24"
criterion = "0.5.1"
crossbeam-channel = "0.5.13"
peak_alloc = "0.2.1"
rand = "0.8.5"
scheduled-thread-pool = "0.2.7"
threadpool = "1.8.1"
amiquip = "0.4.2"
get_user_input = "0.1.1"
serde = "1.0.204"
serde_json = "1.0.122"

[[bench]]
name = "my_benchmark"
harness = false
